# Team6ScientificSoftware

./: .flake8  .gitignore  .pre-commit-config.yaml  requirements.txt  setup.cfg
.github/workflows/: main.yml
doc/source/: README.md  conf.py  index.rst
src/: notebook_unit1.ipynb  test.ipynb
src/data_analysis/: __init__.py  input_output.py  main.py  numerical.py  plot.py  statistical.py  test_numerical.py
src/data_analysis/tests/: test_numerical.py
tests/: test_numerical.py
