[metadata]
# replace with your username:
name = data-analysis-Aerl
version = 0.0.1
author = Alena und Steffen
author_email = author@example.com
description = Data processing example package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Aerl/Team6ScientificSoftware
project_urls =
    Bug Tracker = https://github.com/Aerl/Team6ScientificSoftware/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
